@@ -1,30 +1,34 @@
 % File src/library/base/man/stopifnot.Rd
 % Part of the R package, https://www.R-project.org
-% Copyright 1995-2017 R Core Team
+% Copyright 1995-2018 R Core Team
 % Distributed under GPL 2 or later
 
 \name{stopifnot}
-\alias{stopifnot}
-\concept{assertion}
 \title{Ensure the Truth of R Expressions}
+\alias{stopifnot}
+\alias{stopIfnot}
+\concept{assertion}
 \description{
-  If any of the expressions in \code{\dots} are not \code{\link{all}}
-  \code{TRUE}, \code{\link{stop}} is called, producing an error message
-  indicating the \emph{first} of the elements of \code{\dots} which were
-  not true.
+  If any of the expressions (in \code{\dots} or \code{exprs}) are not
+  \code{\link{all}} \code{TRUE}, \code{\link{stop}} is called, producing
+  an error message indicating the \emph{first} expression which was not true.
 }
 \usage{
 stopifnot(\dots)
+stopIfnot(exprs, local = TRUE)
 }
 \arguments{
-  \item{\dots}{any number of (\code{\link{logical}}) \R expressions,
+  \item{\dots, exprs}{any number of (\code{\link{logical}}) \R expressions,
     which should evaluate to \code{\link{TRUE}}.}
+  \item{local}{indicates the \code{\link{environment}} in which the
+    expressions should be evaluated; by default the one where
+    \code{stopIfnot()} has been called from.}
 }
 \details{
   This function is intended for use in regression tests or also argument
   checking of functions, in particular to make them easier to read.
 
-  \code{stopifnot(A, B)} is conceptually equivalent to
+  \code{stopifnot(A, B)} or equivalently \code{stopIfnot({A ; B})} are conceptually equivalent to
 \preformatted{ \{ if(any(is.na(A)) || !all(A)) stop(...);
    if(any(is.na(B)) || !all(B)) stop(...) \}}
 
@@ -35,6 +39,11 @@ stopifnot(\dots)
   \code{\link{warning}}, its \code{\link{conditionCall}()} no longer
   contains the full \code{stopifnot} call, but just the erroneous
   expression.
+
+  Also, since \R version 3.5.0, \code{stopIfnot()} can be used
+  alternatively and may be preferable in the case of several
+  expressions, as they are more conveniently evaluated interactively
+  (\dQuote{no extraneous \code{,} }).
 
   Since \R version 3.4.0, when an expression (from \code{\dots}) is not
   true \emph{and} is a call to \code{\link{all.equal}}, the error
@@ -58,7 +67,13 @@ op <- options(error = expression(NULL))
 # "disabling stop(.)"  << Use with CARE! >>
 
 stopifnot(all.equal(pi, 3.141593),  2 < 2, all(1:10 < 12), "a" < "b")
-stopifnot(all.equal(pi, 3.1415927), 2 < 2, all(1:10 < 12), "a" < "b")
+## More convenient for interactive "line by line" evaluation:
+stopIfnot({
+  all.equal(pi, 3.1415927)
+  2 < 2
+  all(1:10 < 12)
+  "a" < "b"
+})
 
 # long all.equal() error messages are abbreviated:
 stopifnot(all.equal(rep(list(pi),4), list(3.1, 3.14, 3.141, 3.1415)))
