@@ -1,5 +1,5 @@
 
-R Under development (unstable) (2018-01-07 r74095) -- "Unsuffered Consequences"
+R Under development (unstable) (2018-01-10 r74105) -- "Unsuffered Consequences"
 Copyright (C) 2018 The R Foundation for Statistical Computing
 Platform: x86_64-pc-linux-gnu (64-bit)
 
@@ -115,8 +115,8 @@ List of 2
 +     "\n\t starting with 'is.' :\t  ",
 +     sum(grepl("^is\\.", ls.base[base.is.f])), "\n", sep = "")
 
-Number of base objects:		1326
-Number of functions in base:	1282
+Number of base objects:		1327
+Number of functions in base:	1283
 	 starting with 'is.' :	  50
 
 > ## 0.14  : 31
